src/test/ui/used_on_fn_def.stderr
error: attribute must be applied to a `static` variable or a function definition
  --> $DIR/used_on_fn_def.rs:9:1
   |
LL | #[used]
   | ^^^^^^^

error: attribute must be applied to a `static` variable or a function definition
  --> $DIR/used_on_fn_def.rs:12:1
   |
LL | #[used]
   | ^^^^^^^

error: attribute must be applied to a `static` variable or a function definition
  --> $DIR/used_on_fn_def.rs:15:1
   |
LL | #[used]
   | ^^^^^^^

error: aborting due to 3 previous errors

